# paddleocr

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  docs.md  pyproject.toml
docs/plans/: 2026-06-03-feat-paddleocr-setup-command-plan.md
src/paddleocr_cli/: __init__.py  cli.py  ocr.py  onnx_ocr.py  output.py  pdf.py
src/paddleocr_cli/models/: latin_v5_dict.txt
tests/: conftest.py  test_cli.py  test_ocr.py  test_pdf.py
