[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paddleocr-cli"
version = "0.1.0"
description = "CLI for PDF text extraction using ONNX Runtime"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.0",
    "pymupdf>=1.25",
    "onnxruntime>=1.17",
    "opencv-python-headless>=4.8",
    "pyclipper>=1.3",
    "shapely>=2.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
paddleocr = "paddleocr_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
